--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@ body {
 }
 /** HEADER **/
 #header-nav {
-	background-color: #f6b319;
+	background-color: #f6b319; /*#f6b319*/
 	border-radius: 0;
 	border: 0;
 }
@@ -78,3 +78,93 @@ body {
   margin-top: -30px;
 }
 /* END HEADER */
+
+.container .jumbotron {
+    box-shadow: 0 0 50px #3F0C1F;
+    border: 2px solid #3F0C1F;
+}
+/********** Large devices only ***********/
+@media (min-width: 1200px) {
+  .container .jumbotron {
+    background: url('../images/jumbotron_1200.jpg') no-repeat;
+    height: 675px;
+  }
+
+}
+
+/********* Medium devices only ***********/
+@media (min-width: 992px) and (max-width: 1199px) {
+  /* HEader */
+  #logo-img {
+    background: url('../images/om1_medium.png') no-repeat;
+    width: 100px;
+    height: 100px;
+    margin: 5px 5px 5px 0;
+  }
+  /* End Header */
+  .container .jumbotron {
+    background: url('../images/jumbotron_992.jpg') no-repeat;
+    height: 558px;
+  }
+}
+
+/********** Small devices only ***********/
+@media (min-width: 768px) and (max-width: 991px) {
+  .container .jumbotron {
+    background: url('../images/jumbotron_768.jpg') no-repeat;
+    height: 432px;
+
+  }
+}
+
+/********** Extra small devices only ***********/
+@media (max-width: 767px) {
+  /* Header */
+  .navbar-brand {
+    padding-top: 10px;
+    height: 80px;
+  }
+  .navbar-brand h1 {
+    padding-top: 10px;
+    font-size: 5vw;
+  }
+  .navbar-brand p {
+    font-size: .6em;
+    margin-top: 12px;
+  }
+  .navbar-brand p img {
+    height: 20px;
+  }
+
+  #collapsable-nav a {
+    font-size: 1.2em;
+  }
+
+  #collapsable-nav a span {
+    font-size: 1em;
+    margin-right: 5px;
+  }
+
+  #call-btn > a {
+    font-size: 1.5em;
+    display: block;
+    margin: 0 20px;
+    padding: 10px;
+    border: 2px solid #fff;
+    background-color: #f6b319;
+    color:#951c49;
+  }
+
+  #xs-deliver {
+    margin-top: 5px;
+    font-size: .7em;
+    letter-spacing: .1em;
+    text-transform: uppercase;
+  }
+
+  .container .jumbotron {
+    margin-top: 30px;
+    padding: 0;
+  }
+
+}
