--- a/css/styles.css
+++ b/css/styles.css
@@ -78,6 +78,39 @@ body {
   margin-top: -30px;
 }
 /* END HEADER */
+/*footer*/
+.panel-footer {
+  margin-top: 30px;
+  padding-top: 35px;
+  padding-bottom: 30px;
+  background-color: #222;
+  border-top: 0;
+}
+.panel-footer div.row {
+  margin-bottom: 35px;
+}
+
+#hours, #address {
+  line-height: 2;
+}
+#hours > span, #address > span {
+  font-size: 1.3em; /*increase 30%*/
+}
+
+#address p {
+  color: #557c3e;
+  font-size: .8em;
+  line-height: 1.8;
+}
+
+#testimonials {
+  font-style: italic;
+}
+
+#testimonials p:nth-child(2) {
+  margin-top: 25px;
+}
+/* END footer */
 
 .container .jumbotron {
     box-shadow: 0 0 50px #3F0C1F;
@@ -202,6 +235,25 @@ body {
     text-transform: uppercase;
   }
 
+  /* End Header */
+
+  /* Footer */
+  .panel-footer section {
+    margin-bottom: 30px;
+    text-align: center;
+  }
+
+  .panel-footer section:nth-child(3) {
+    margin-bottom: 0; /*margin already exists on the whole row*/
+  }
+  .panel-footer section hr {
+    width:50%;
+  }
+
+
+  /* End Footer */
+
+  /* Home Page */
   .container .jumbotron {
     margin-top: 30px;
     padding: 0;
