--- a/css/styles.css
+++ b/css/styles.css
@@ -151,10 +151,38 @@ body {
   background-color: #000;
   color: #fff;
   opacity: .7;
+}
+/* END HOME PAGE */
 
+/* MENU CATEGORIES PAGE */
+
+.category-tile {
+  position: relative; /* anchor for span that follows */
+  border: 2px solid #3F0C1F;
+  overflow: hidden;
+  width: 200px; /*same as image width and height*/
+  height: 200px;
+  margin: 0 auto 15px;
+}
+.category-tile span{
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  text-align: center;
+  font-size: 1.2em
+  text-transform: uppercase;
+  background-color: #000;
+  color: #fff;
+  opacity: .7;
+}
+.category-tile:hover { /* hover highlights with shadow*/
+  box-shadow: 0 1px 5px 1px #cccccc;
 }
 
-
+#menu-categories-title + div { /* menu categories and next child element */
+  margin-bottom: 50px;
+}
 
 /********** Large devices only ***********/
 @media (min-width: 1200px) {
@@ -208,16 +236,13 @@ body {
   .navbar-brand p img {
     height: 20px;
   }
-
   #collapsable-nav a {
     font-size: 1.2em;
   }
-
   #collapsable-nav a span {
     font-size: 1em;
     margin-right: 5px;
   }
-
   #call-btn > a {
     font-size: 1.5em;
     display: block;
@@ -227,7 +252,6 @@ body {
     background-color: #f6b319;
     color:#951c49;
   }
-
   #xs-deliver {
     margin-top: 5px;
     font-size: .7em;
@@ -242,14 +266,12 @@ body {
     margin-bottom: 30px;
     text-align: center;
   }
-
   .panel-footer section:nth-child(3) {
     margin-bottom: 0; /*margin already exists on the whole row*/
   }
   .panel-footer section hr {
     width:50%;
   }
-
 
   /* End Footer */
 
@@ -270,9 +292,18 @@ body {
     padding-top: 5px;
     font-size: 6vw;
   }
-
-    #menu-tile, #specials-tile {
+  #menu-tile, #specials-tile {
     width: 280px;
     margin: 0 auto 15px;
   }
+
+  .col-xxs-12 {
+    position: relative;
+    min-height: 1px;
+    padding-right: 15px;
+    padding-left: 15px;
+    float: left;
+    width: 100%;
+  }
 }
+
